--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </form>
     </div>
     <div class="tokyo__pin-map">
-      <div class="pin  pin__main hidden"><img src="img/main-pin-image.png" alt="Main Pin" class="rounded" width="40" height="44"></div>
+      <div class="pin  pin__main"><img src="img/main-pin-image.png" alt="Main Pin" class="rounded" width="40" height="44"></div>
     </div>
     <div id="offer-dialog" class="dialog hidden" tabindex="0">
       <div class="dialog__title"><img src="img/avatars/user01.png" alt="Avatar" width="70" height="70">
@@ -168,7 +168,7 @@
         <div class="form__panel">
           <div class="form__element  form__element--wide">
             <label for="address">Адрес</label>
-            <input id="address" name="address" type="text" required>
+            <input id="address" name="address" type="text" readonly>
           </div>
           <div class="form__row">
             <div class="form__element">
