--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@
 <script src="./js/show-card.js"></script>
 <script src="./js/move-pin.js"></script>
 <script src="./js/map.js"></script>
+<script src="./js/synchronize-fields.js"></script>
 <script src="./js/form.js"></script>
 </body>
 </html>
