--- a/index.html
+++ b/index.html
@@ -279,7 +279,8 @@
   </div>
 </template>
 <script src="./js/util.js"></script>
-<script src="./js/data.js"></script>
+<script src="./js/message.js"></script>
+<script src="./js/backend.js"></script>
 <script src="./js/pin.js"></script>
 <script src="./js/card.js"></script>
 <script src="./js/show-card.js"></script>
