--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@
   </div>
 </template>
 <script src="./js/util.js"></script>
+<script src="./js/debounce.js"></script>
 <script src="./js/message.js"></script>
 <script src="./js/backend.js"></script>
 <script src="./js/pin.js"></script>
@@ -288,5 +289,6 @@
 <script src="./js/move-pin.js"></script>
 <script src="./js/synchronize-fields.js"></script>
 <script src="./js/form.js"></script>
+<script src="./js/filter.js"></script>
 </body>
 </html>
