--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="form__panel">
           <div class="form__element  form__element--wide">
             <label for="title">Заголовок объявления</label>
-            <input id="title" name="title" type="text" placeholder="Милая, уютная квартирка, например" minlength="30" maxlength="100" required>
+            <input id="title" name="title" type="text" placeholder="Милая, уютная квартирка, например" pattern=".{30,100}" required title="от 30 до 100 символов">
           </div>
           <div class="form__row">
             <div class="form__element">
